--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/sysweatherdb}
+spring.datasource.url=${URL:jdbc:mysql://localhost:3306/sysweatherdb}
 spring.datasource.username=sysweatheruser
 spring.datasource.password=s525sf53a2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
